--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.0.1",
+    "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-country-codes-picker": "^2.3.5",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-music-control": "^1.4.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-sound": "^0.12.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
